prod/access/ingresses/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: blog.azaurus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apps-blog-prod-ghost
            port:
              number: 443
