prod/access/ingresses/gogs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gogs.azaurus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apps-gogs-prod
            port:
              number: 3000
