prod/access/ingresses/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: immich.azaurus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apps-immich-prod
            port:
              number: 2283
