prod/access/ingresses/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: access-traefik-ingress-prod
spec:
  rules:
  - host: jellyfin.azaurus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apps-jellyfin-prod
            port:
              number: 8096
