prod/access/ingresses/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prowlarr.azaurus.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apps-prowlarr-prod
            port:
              number: 9696
